--- a/memo/document.tex
+++ b/memo/document.tex
@@ -22,5 +22,6 @@
 	
 	Para el montículo sesgado se almacena un entero (tamaño), un nodo (raíz), y una tabla (clave: entero, valor: nodo). La inclusión de la operación \textit{decrecerClave} trae la necesidad de almacenar y mantener la tabla que almacena todos los nodos del montículo. Un nodo almacena un puntero a su nodo padre, además de a sus dos hijos. Para una implementación eficiente de \textit{decrecerClave}, uso el puntero al padre del nodo objetivo para \textit{cortar} el nodo objetivo del padre (en caso de que la clave decrecida sea menor que la del padre).
 	
-	Incluyo también un script llamado \textit{dijkstra} que puede usarse para compilar y ejecutar el programa. Admite varios argumentos, de los cuales solo es obligatorio \textbf{\textit{-n NUM}}, usado para generar \textit{\textbf{NUM}} nodos.  Los grafos usados para probar el algoritmo se crearon de forma aleatoria, y se puede elegir la semilla con la opción \textbf{\textit{-s SEED}}. La opción \textbf{\textit{-h}} proporciona más información acerca de las opciones.
+\section{Ejecución}
+	Incluyo también un script llamado \textit{dijkstra} que puede usarse para compilar y ejecutar el programa. Admite varios argumentos, de los cuales solo es obligatorio \textit{-n NUM}, usado para generar un grafo de \textit{NUM} nodos. Se puede omitir este argumento en caso de usar la opción \textit{-t 1} o \textit{-t 2}, que ordena la ejecución de uno de los casos de prueba. Los grafos usados para probar el algoritmo se crearon de forma aleatoria, y se puede elegir la semilla con la opción \textit{-s SEM}. La opción \textit{-h} proporciona más información acerca de las opciones.
 \end{document}
