--- a/memo/document.tex
+++ b/memo/document.tex
@@ -61,7 +61,10 @@
 	Finalmente, procesé las medidas en la carpeta \texttt{tiempos} con dos scripts, \texttt{averages.sh} y \texttt{edges.sh}, con el fin de calcular las medias de las medidas y \texttt{(a + n)*log(n)} respectivamente.
 	
 \section{Resultados}
-
+\begin{center}
+	\includegraphics[width=0.95\vsize, angle=270]{dirigido.png}
+	Gráfica 1
+\end{center}
 
 
 \end{document}
