--- a/memo/document.tex
+++ b/memo/document.tex
@@ -56,15 +56,37 @@
 		\item que el grafo generado sea dirigido (\texttt{-d})
 		\item que se ejecute el algoritmo 6 veces (\texttt{-i 6})
 	\end{itemize} 
-	La última opción resulta en 6 medidas distintas, de las cuales la primera siempre tenía un valor mucho más elevado al resto. En la siguiente sección aparecen gráficas que descartan esta primera medida en el cálculo de la media, y otras que la incluyen. También hay gráficas de grafos no dirigidos para los mismos rangos de vértices (mismas instrucciones pero sin la opción \texttt{-d}).
+	La última opción resulta en 6 medidas distintas, de las cuales la primera siempre tenía un valor mucho más elevado al resto (al menos en grafos con no muchos vértices). En la siguiente sección aparecen gráficas que descartan esta primera medida en el cálculo de la media, y otras que la incluyen. También hay gráficas de grafos no dirigidos para los mismos rangos de vértices (mismas instrucciones pero sin la opción \texttt{-d}).
 	
 	Finalmente, procesé las medidas en la carpeta \texttt{tiempos} con dos scripts, \texttt{averages.sh} y \texttt{edges.sh}, con el fin de calcular las medias de las medidas y \texttt{(a + n)*log(n)} respectivamente.
-	
-\section{Resultados}
-\begin{center}
-	\includegraphics[width=0.95\vsize, angle=270]{dirigido.png}
-	Gráfica 1
-\end{center}
 
+
+\section{Resultados}
+
+	\hspace*{-.15\linewidth}
+	\includegraphics[width=1.25\hsize]{dir5.png}
+	\texttt{Gráfica 1 - Grafos dirigidos sin tener en cuenta la primera medida}
+	La curva del tiempo es menos acentuada que la de la cota superior. Puede ser porque el algoritmo no visita todos los vértices: con grafos dirigidos es más probable que haya nodos inaccesibles por haber restricciones de dirección en las aristas.
+	
+	
+	\newpage
+	\hspace*{-.15\linewidth}
+	\includegraphics[width=1.25\hsize]{nodir5.png}
+	\texttt{Gráfica 2 - Grafos no dirigidos sin tener en cuenta la primera medida}
+	La curva de las medidas se asemeja más la curva de la cota superior que cuando los grafos son dirigidos. Yo creo que esto se debe al hecho de que hay más aristas que en un grafo dirigido, lo cual hace más probable que todos los nodos sean alcanzables. 
+
+
+	\newpage
+	\hspace*{-.15\linewidth}
+	\includegraphics[width=1.25\hsize]{dir6.png}
+	\texttt{Gráfica 3 - Grafos dirigidos teniendo en cuenta la primera medida}
+	Es muy similar a la gráfica 1. Algunos puntos suben y otros bajan, pero sin haber mucha diferencia. Será por el número distinto
+	
+	
+	\newpage
+	\hspace*{-.15\linewidth}
+	\includegraphics[width=1.25\hsize]{nodir6.png}
+	\texttt{Gráfica 4 - Grafos no dirigidos teniendo en cuenta la primera medida}
+	La inclusión de la primera medida es más notable em esta gráfica que en la 3: entre 2650 y 3000 nodos hay mucha más varianza que en la gráfica 2. 
 
 \end{document}
