--- a/memo/document.tex
+++ b/memo/document.tex
@@ -4,6 +4,8 @@
 \usepackage{graphicx}
 \graphicspath{ {./images/} }
 
+\usepackage{tikz}
+\usetikzlibrary{automata}
 
 
 \title{Práctica MARP\\Algorítmo de dijkstra con montículo sesgado}
@@ -60,6 +62,7 @@
 	
 	Finalmente, procesé las medidas en la carpeta \texttt{tiempos} con dos scripts, \texttt{averages.sh} y \texttt{edges.sh}, con el fin de calcular las medias de las medidas y obtener el numero de aristas generadas para la prueba, respectivamente.
 
+\section{Casos de prueba sencillos}
 
 \section{Resultados}
 
